# ccpredis

./: .gitignore  LICENSE  README.md  benchmark.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
ccpredis/: protocol.py
ccpredis/data_types/: simple_string.py
pyredis/: __main__.py  asyncserver.py  cli.py  commands.py  data_store.py  datastore.py  persistence.py  protocol.py  resp_datatypes.py  resp_types.py  server.py  types.py
tests/: test_commands.py  test_data_store.py  test_datastore.py  test_persistence.py  test_protocol.py
